# NetNomos

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
cpp/: hittingset_native.cpp
data/: cidds_wk2_normal_10k.csv
examples/datasets/: cidds.json  cidds_simple.json  metadc.json  pcap_tcp.json
examples/grammars/: metadc_agg.json  network_flow.json  pcap_window.json  simple.json
netnomos/: __init__.py  __main__.py  api.py  artifacts.py  ast.py  cli.py  dataset.py  dsl.py  interpreter.py  logging_utils.py  projection.py  semantic_values.py  specs.py  theory.py
netnomos/learners/: __init__.py  hittingset.py  tree.py
rules/golden_cidds/: interpreted_rules.clj  metadata.json  rules.json
rules/golden_mawi/: interpreted_rules.clj  metadata.json  rules.json
rules/golden_metadc/: interpreted_rules.clj  metadata.json  rules.json
rules/golden_netflix/: interpreted_rules.clj  metadata.json  rules.json
rules/golden_netflix_full/: interpreted_rules.clj  metadata.json  rules.json
scripts/: convert_golden_rules.py  setup_cloudlab.sh
tests/: test_cli.py  test_dsl.py  test_end_to_end.py  test_hittingset.py  test_prepare.py  test_projection.py
